Avoid flickering of extended options

--- a/public/css/specberus.css
+++ b/public/css/specberus.css
@@ -87,3 +87,7 @@ blockquote {
   background-color: #f0f0f0;
   border: 0;
 }
+
+.manual {
+  display: none;
+}
